Update plugin css (fixed visible arrow buttons on non-scrollable elements)

--- a/jquery.mThumbnailScroller.css
+++ b/jquery.mThumbnailScroller.css
@@ -127,7 +127,8 @@ CONTENTS:
 	    left: 0;
 	}
 
-	.mTSButton.mTS-hidden{
+	.mTSButton.mTS-hidden, 
+    .mThumbnailScroller.mTS_no_scroll .mTSButton{
 		/* hide button effect (fades-out button to zero size) */
 		opacity: 0;
 		height: 0;
